--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="container">
         <h1>Counter App</h1>
         <div id="counter">0</div>
-        <button class="decrement-btn" onclick="decrement()">Decrement</button>
-        <button class="increment-btn" onclick="increment()">Increment</button>
+        <button id="reset-btn">Reset</button>
+        <button class="decrement-btn">Decrement</button>
+        <button class="increment-btn">Increment</button>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
